[package]
name = "L19_Santigold"
version = "0.1.0"
edition = "2021"

[dependencies] # TODO, correct version numbers.
mime = "*"
config = "*"
actix-web = "*"
log = "*"
tracing = "*"
env_logger = "*"
serde_json = "*"
actix-cors = "*"
futures = "0.3.26"
actix-multipart = "0.5.0"
aws-sdk-s3 = "0.24.0"

[dependencies.tokio]
version = "*"
features = ["macros", "rt-multi-thread"]

[dependencies.serde]
version = "*"
features = ["derive"]

[dependencies.uuid]
version = "*"
features = ["v4"]

[dependencies.sqlx]
version = "*"
deafault-features = false
features = [
  "runtime-actix-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate",
]

[dependencies.aws-smithy-http]
version = "0.54.3"
features = ["aws-smithy-eventstream"]

[dependencies.aws-credential-types]
version = "0.54.1"
features = ["hardcoded-credentials"]

[dev-dependencies.reqwest]
version = "*"
features = ["json"] 
